force-app/main/default/objects/FeatureFlag__mdt/FeatureFlag__mdt.object-meta.xml
<CustomObject>
    <label>Feature Flag</label>
    <pluralLabel>Feature Flag</pluralLabel>
</CustomObject>