force-app/main/default/objects/FeatureFlag__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Ambiente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>forno</fullName>
            </value>
            <value>
                <fullName>staging</fullName>
            </value>
            <value>
                <fullName>production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>