force-app/main/default/objects/FeatureFlag__mdt/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identificador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>