force-app/main/default/objects/FeatureFlag__mdt/fields/Longevity__c.field-meta.xml
<CustomField>
    <fullName>Longevity__c</fullName>
    <description>Indicates whether this feature flag is temporary or permanent</description>
    <label>Longevity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>temporally</fullName>
                <label>Temporally</label>
            </value>
            <value>
                <fullName>permanent</fullName>
                <default>true</default>
                <label>Permanent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>