force-app/main/default/objects/FeatureFlag__mdt/fields/TurningDate__c.field-meta.xml
<CustomField>
    <fullName>TurningDate__c</fullName>
    <label>Data de virada</label>
    <type>DateTime</type>
</CustomField>