force-app/main/default/objects/FeatureFlag__mdt/listViews/FeatureFlags_Forno.listView-meta.xml
<ListView>
    <fullName>FeatureFlags_Forno</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>forno</value>
    </filters>
    <label>Feature Flags - Forno</label>
</ListView>