force-app/main/default/objects/FeatureFlag__mdt/listViews/FeatureFlags_Production.listView-meta.xml
<ListView>
    <fullName>FeatureFlags_Production</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>production</value>
    </filters>
    <label>Feature Flags - Production</label>
</ListView>