force-app/main/default/objects/FeatureFlag__mdt/listViews/FeatureFlags_Staging.listView-meta.xml
<ListView>
    <fullName>FeatureFlags_Staging</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>staging</value>
    </filters>
    <label>Feature Flags - Staging</label>
</ListView>